# pdfclassifier-api-mock

./: .gitignore  Dockerfile  Dockerfile.scanner  README.md  docker-compose.yaml  openapi.yaml  requirements.txt  run_app.sh  setup.cfg
.github/workflows/: deploy-ghcr.yaml  main.yml
dist-files/: docker-compose.yaml  mock-data.csv
src/openapi_server/: main.py
src/openapi_server/apis/: classification_api.py  classification_api_base.py
src/openapi_server/impl/: classification_impl.py
src/openapi_server/implementation/: __init__.py  classification_service.py
src/openapi_server/models/: classification_result.py  error.py  qualified_value.py  result_item.py
src/scanner-mock/: main.py
tests/: test_classification_api.py  test_classification_service.py
