[metadata]
name = openapi_server
version = 1.0.0
description = REST API to classify PDF files using a smart backend
long_description = file: README.md
keywords = OpenAPI PDF Classifier API
python_requires = >= 3.11.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
